# rugby-fields

./: .gitignore  README.md  main.py  pyproject.toml
configs/: dataset_v1.yaml
docs/: project_log.md  roadmap.md
experiments/: experiments.ods
src/data-preprocessing/: 1_create_crops-from_osm.py  check_bounding_boxes.py  create_yolo_training_data.py
src/data_preprocessing/: build_yolo_dataset.py  check_bounding_boxes.py  create_negative_yolo_training_data.py  create_yolo_training_data.py
src/inference/: predict.py  test.py
src/tile_predict/: jp2_to_jpg.py
src/yolo_model/: predict.py  train.py  val.py
