[project]
name = "rugby-fields"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "rasterio>=1.5.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.75",
]
